--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,8 @@
     <color name="shadow_color">#FF000000</color>
     <color name="line_button">#565758</color>
     <color name="background_video_color">#2f3031</color>
+
+    <color name="color_tranparent">#00ffffff</color>
+    <color name="color_seekbar">#EB5150</color>
+
 </resources>
